Bug 113027 - Editing F4 (Sheet - Cycle Cell Reference Types) doesn't cycle remote references with space in sheet name
Summary: Editing F4 (Sheet - Cycle Cell Reference Types) doesn't cycle remote referenc...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.1.0.4 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Andreas Heinisch
URL:
Whiteboard: target:7.6.0 target:7.5.3
Keywords:
Depends on:
Blocks: Cell-Formula
  Show dependency treegraph
 
Reported: 2017-10-10 05:08 UTC by John Russell
Modified: 2023-04-08 04:53 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example remote RC reference to sheet with space in name (7.54 KB, application/vnd.oasis.opendocument.spreadsheet)
2017-10-10 05:08 UTC, John Russell
Details

Note You need to log in before you can comment on or make changes to this bug.
Description John Russell 2017-10-10 05:08:18 UTC
Created attachment 136881 [details]
Example remote RC reference to sheet with space in name

LibreOffice Version: 5.3.1.2
Build ID: 1:5.3.1-0ubuntu2

Ubuntu 17.04 on a MacBook Retina Pro

Open a new workbook with RC Formula Syntax (Tools - Options - LibreOffice Calc - Formula Formula Options) and add a sheet with a space in the name e.g. 'Sheet 3'.

A formula containing a remote reference from the active Sheet1 to 'Sheet 3' e.g. '='Sheet 3'!R[1]C[1]' cannot be cycled between absolute and relative references by pressing F4 or selecting the command. 

Works as expected with Formula Syntax Calc A1 and Excel A1, but fails in Excel RC with error dialog: No cell references are found in the selected cells.
Comment 1 raal 2017-10-17 18:49:36 UTC
Confirmed with Version: 6.0.0.0.alpha0+
Build ID: 616f21db9e50a77b0c02dfb123f871a742f46216
CPU threads: 4; OS: Linux 4.4; UI render: default; VCL: gtk3;

and Version 4.1.0.0.alpha0+
Comment 2 QA Administrators 2019-06-05 02:53:53 UTC Comment hidden (noise)
Comment 3 John Russell 2019-06-05 13:31:54 UTC
Confirmed the problem persists.

Version: 6.2.4.2.0+
Build ID: libreoffice-6.2.4.2-snap1
CPU threads: 8; OS: Linux 4.18; UI render: default; VCL: gtk3; 
Locale: en-GB (en_GB.UTF-8); UI-Language: en-US
Calc: threaded
Comment 4 QA Administrators 2021-06-05 04:26:34 UTC Comment hidden (noise, obsolete)
Comment 5 Commit Notification 2023-04-07 12:01:06 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/40e3e9fd1c501cc1978d4370b6392701ccd42a71

tdf#113027 - Allow cycling cell reference types including whitespaces

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2023-04-08 04:53:13 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/832f91b104fe0605558748b688570f443eccce26

tdf#113027 - Allow cycling cell reference types including whitespaces

It will be available in 7.5.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.